<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/action_search"
        android:orderInCategory="4"
        android:title="Search"
        android:icon="@drawable/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item
        android:id="@+id/action_copy_link"
        android:orderInCategory="101"
        android:title="@string/copy_link"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_mute"
        android:orderInCategory="102"
        android:title="@string/mute"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_block"
        android:orderInCategory="104"
        android:title="@string/block"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_report"
        android:orderInCategory="105"
        android:title="@string/report"
        app:showAsAction="never" />

</menu>