<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="@android:color/black"
            app:title="Tweet"/>

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_marginTop="?attr/actionBarSize">

            <ImageView
                android:id="@+id/ivProfileImage"
                android:layout_width="@dimen/profile_image_size"
                android:layout_height="@dimen/profile_image_size"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="@dimen/standard_margin"
                android:src="@drawable/ic_launcher"/>


            <TextView
                android:id="@+id/tvUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/ivProfileImage"
                android:layout_toRightOf="@+id/ivProfileImage"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvUserName"
                android:layout_toEndOf="@+id/ivProfileImage"
                android:layout_toRightOf="@+id/ivProfileImage"
                android:text="Small Text"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/tvBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivProfileImage"
                android:layout_marginBottom="@dimen/standard_margin"
                android:layout_marginTop="@dimen/minMargin"
                android:autoLink="all"
                android:text="Lorem ipsum Lorem"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@android:color/black" />

            <ImageView
                android:id="@+id/ivMediaURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvBody"
                android:adjustViewBounds="true"
                android:maxHeight="@dimen/thumbnailHeight"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivMediaURL"
                android:layout_marginBottom="@dimen/minMargin"
                android:layout_marginTop="@dimen/minMargin"
                android:text="New Text" />

            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tvTime"
                android:background="@color/colorLine" />

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/line1"
                android:padding="@dimen/standard_margin">

                <TextView
                    android:id="@+id/tvRetweetCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:text="10"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvRetweet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/minMargin"
                    android:layout_toEndOf="@+id/tvRetweetCount"
                    android:layout_toRightOf="@+id/tvRetweetCount"
                    android:text="@string/retweet"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/tvFavouritesCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:layout_toEndOf="@+id/tvRetweet"
                    android:layout_toRightOf="@+id/tvRetweet"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="3"/>

                <TextView
                    android:id="@+id/tvFavourites"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/minMargin"
                    android:layout_toEndOf="@+id/tvFavouritesCount"
                    android:layout_toRightOf="@+id/tvFavouritesCount"
                    android:text="@string/likes"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </RelativeLayout>

            <View
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/relativeLayout"
                android:background="@color/colorLine"
                android:layout_marginBottom="10dp"/>

            <LinearLayout
                android:id="@+id/iconContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/ivReply"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_weight="1"
                    android:src="@drawable/arrow" />

                <ImageView
                    android:id="@+id/ivRetweet"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/retweet" />

                <ImageView
                    android:id="@+id/ivLike"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/like" />

                <ImageView
                    android:id="@+id/ivShare"
                    android:layout_width="@dimen/iconSize"
                    android:layout_height="@dimen/iconSize"
                    android:layout_weight="1"
                    android:src="@drawable/message" />

            </LinearLayout>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/iconContainer"
                android:background="@color/colorLine" />

        </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/white"
        android:orientation="vertical"
            android:layout_margin="10dp">

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tvTime"
            android:background="@color/colorLine" />

        <EditText
            android:id="@+id/etReply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="Reply" />

        <RelativeLayout
            android:id="@+id/replyTweetContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
              android:id="@+id/btnUploadImage"
              android:layout_width="40dp"
              android:layout_height="40dp"
              android:src="@drawable/upload_image"
              android:layout_alignParentLeft="true"
              android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/btnUploadGif"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/upload_gif"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/btnUploadImage"
                android:layout_marginLeft="70dp"
                android:paddingTop="4dp"/>

            <TextView
                android:id="@+id/tvCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/minMargin"
                android:layout_toLeftOf="@+id/btnReply"
                android:layout_toStartOf="@+id/btnReply"
                android:text="133"
                android:textSize="16sp" />

            <View
                android:id="@+id/vseparator"
                android:layout_width="0.5dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/btnReply"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/btnReply"
                android:layout_alignTop="@+id/btnReply"
                android:layout_centerVertical="true"
                android:background="@color/colorLine" />

            <Button
                android:id="@+id/btnReply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_margin="@dimen/minMargin"
                android:background="@null"
                android:enabled="false"
                android:text="@string/reply"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />
        </RelativeLayout>
    </LinearLayout>

    </ScrollView>

</FrameLayout>
</layout>
